[gd_scene load_steps=41 format=2]

[ext_resource path="res://BasicClass/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Test_Player.gd" type="Script" id=2]
[ext_resource path="res://Image/Others/shadow.png" type="Texture" id=3]
[ext_resource path="res://Image/Character/Ninja/stay/Timeline 1_0000.png" type="Texture" id=4]
[ext_resource path="res://Image/Character/Ninja/stay/Timeline 1_0001.png" type="Texture" id=5]
[ext_resource path="res://Image/Character/Ninja/stay/Timeline 1_0002.png" type="Texture" id=6]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0010.png" type="Texture" id=7]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0011.png" type="Texture" id=8]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0012.png" type="Texture" id=9]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0013.png" type="Texture" id=10]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0014.png" type="Texture" id=11]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0015.png" type="Texture" id=12]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0016.png" type="Texture" id=13]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0017.png" type="Texture" id=14]
[ext_resource path="res://Image/Character/Ninja/attack/Timeline 2_0018.png" type="Texture" id=15]
[ext_resource path="res://Image/Character/Ninja/die/Timeline 1_d0003.png" type="Texture" id=16]
[ext_resource path="res://Image/Character/Ninja/die/Timeline 1_d0004.png" type="Texture" id=17]
[ext_resource path="res://Image/Character/Ninja/die/Timeline 1_d0005.png" type="Texture" id=18]
[ext_resource path="res://Image/Character/Ninja/die/Timeline 1_d0006.png" type="Texture" id=19]
[ext_resource path="res://Image/Character/Ninja/die/Timeline 1_d0008.png" type="Texture" id=20]
[ext_resource path="res://Image/Character/Ninja/hit/Timeline 1_0001.png" type="Texture" id=21]
[ext_resource path="res://Image/Character/Ninja/hit/Timeline 1_0002.png" type="Texture" id=22]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0000.png" type="Texture" id=23]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0001.png" type="Texture" id=24]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0002.png" type="Texture" id=25]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0003.png" type="Texture" id=26]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0004.png" type="Texture" id=27]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0005.png" type="Texture" id=28]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0006.png" type="Texture" id=29]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0007.png" type="Texture" id=30]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0008.png" type="Texture" id=31]
[ext_resource path="res://Image/Character/Ninja/run/Timeline 2_0009.png" type="Texture" id=32]
[ext_resource path="res://Player/attack_frequency.gd" type="Script" id=33]
[ext_resource path="res://Player/stick.gd" type="Script" id=34]
[ext_resource path="res://Skills/SpeedUp.tscn" type="PackedScene" id=35]
[ext_resource path="res://Skills/ATTUP.tscn" type="PackedScene" id=36]
[ext_resource path="res://Skills/MrChun.tscn" type="PackedScene" id=37]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 359.044, 128.766 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "attack",
"speed": 50.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "hit",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "run",
"speed": 50.0
} ]

[node name="Test_Player" index="0" instance=ExtResource( 1 )]
position = Vector2( 31.0916, -2.39166 )
script = ExtResource( 2 )

[node name="Physic" parent="." index="0"]
position = Vector2( -28.9852, 293.886 )
shape = SubResource( 1 )

[node name="shadow" type="AnimatedSprite" parent="." index="1"]
position = Vector2( -10.5486, 304.149 )
scale = Vector2( 0.301837, 0.182712 )
frames = SubResource( 2 )

[node name="Body" parent="." index="2"]
position = Vector2( 41.8424, -33.474 )
scale = Vector2( 0.379639, 0.379639 )
frames = SubResource( 3 )
animation = "hit"
playing = true

[node name="attack_frequency" type="Timer" parent="." index="3"]
script = ExtResource( 33 )

[node name="stick" type="Timer" parent="." index="4"]
wait_time = 0.3
script = ExtResource( 34 )

[node name="SpeedUp" parent="." index="5" instance=ExtResource( 35 )]

[node name="ATTUP" parent="." index="6" instance=ExtResource( 36 )]

[node name="MrChun" parent="." index="7" instance=ExtResource( 37 )]
[connection signal="attack" from="." to="attack_frequency" method="_on_Test_Player_attack"]
[connection signal="hit" from="." to="stick" method="_on_Test_Player_hit"]
[connection signal="timeout" from="attack_frequency" to="." method="_on_attack_frequency_timeout"]
[connection signal="timeout" from="stick" to="." method="_on_stick_timeout"]
[connection signal="cd" from="SpeedUp" to="." method="_on_SpeedUp_cd"]
[connection signal="cd_done" from="SpeedUp" to="." method="_on_SpeedUp_cd_done"]
[connection signal="cd" from="ATTUP" to="." method="_on_ATTUP_cd"]
[connection signal="cd_done" from="ATTUP" to="." method="_on_ATTUP_cd_done"]
[connection signal="cd" from="MrChun" to="." method="_on_MrChun_cd"]
[connection signal="cd_done" from="MrChun" to="." method="_on_MrChun_cd_done"]
[connection signal="update" from="MrChun" to="." method="_on_MrChun_update"]
